# modio-haxe-legacy

./: .gitignore  CMakeLists.txt  ExamplesBiuld.sh  ExamplesBiuldLinux.sh  ExamplesBuildLinux.sh  ExamplesBuildMacOs.sh  ExamplesBuildWindows.bat  LinuxBuild64bits.sh  MacOSBuild.sh  MacOsBuild.sh  README.md  VisualBuild.bat  VisualBuild32bits.bat  VisualBuild64bits.bat  build.bat  build.sh  libmodio.dylib  modio.json  updatesdk.bat
include/: modioWrapperCallbacks.h  modioWrapperObjects.h
mod.io-sdk-v0.10.0/doc/html/: Building.html  Downloads.html  Getting-Started.html  Home.html  Initialization-and-process.html  Mods-(C-compatible).html  Mods.html  User-Authentication.html  _Sidebar.html  mod.io-SDK-Implementation-Guide.html
mod.io-sdk-v0.10.0/lib/macos/x64/: libmodio.dylib
mod.io-sdk-v0.11.1/lib/macos/x64/: libmodio.dylib
mod.io-sdk-v0.11.1/lib/visualc++/x64/: modio.lib
mod.io-sdk-v0.11.1/lib/visualc++/x86/: modio.lib
mod.io-sdk-v0.11.2/lib/macos/x64/: libmodio.dylib
mod.io-sdk-v0.7.0/doc/html/: Building.html  C-Compatibility.html  Game.html  GameTagOption.html  Getting-Started.html  Image.html  Images-and-Media.html  Metadata-key-value-pairs.html  Modfile.html  ModfileEditor.html  ModioComment.html  ModioDownload.html  ModioGame.html  ModioGameTagOption.html  ModioMod.html  ModioQueuedModfileUpload.html  ModioTag.html  Mods-(C-compatible).html  Ratings.html  Report-type.html  Reports.html  Response-Codes.html  Response.html  Tags-(C-compatible).html  Uploads.html
mod.io-sdk-v0.7.0/lib/macos/x64/: libmodio.dylib
mod.io-sdk-v0.7.0/lib/visualc++/x64/: modio.lib
mod.io-sdk-v0.7.0/lib/visualc++/x86/: modio.lib
mod.io-sdk-v0.8.0/doc/html/: API-Access-options.html  Avatar.html  C-Compatibility.html  Comment.html  Comments-(C-compatible).html  Comments.html  Community-options.html  Curation-option.html  Data-Structures.html  Debug-level.html  Dependencies.html  Dependency.html  Download.html  Downloads-(C-compatible).html  Downloads.html  Error.html  Event-type.html  Event.html  Events-(C-compatible).html  Events.html  Filehash.html  FilterCreator.html  Game.html  Getting-Started.html  Header.html  Home.html  Icon.html  Images-and-Media-(C-compatible).html  Initialization-and-process.html  InstalledMod.html  Logo.html  Me-(C-compatible).html  Me.html  Media.html  Metadata-key-value-pairs-(C-compatible).html  Metadata-key-value-pairs.html  MetadataKVP.html  Mod-states.html  Mod.html  ModCreator.html  (+47 more)
mod.io-sdk-v0.8.0/lib/macos/x64/: libmodio.dylib
mod.io-sdk-v0.8.0/lib/visualc++/x64/: modio.lib
mod.io-sdk-v0.8.0/lib/visualc++/x86/: modio.lib
mod.io-sdk-v0.9.0/include/: Globals.h
mod.io-sdk-v0.9.0/lib/nmake/x86/: modio.lib
src/: Main.hx  ModioWrapper.hx  modioGlue.cpp  modioWrapper.cpp  modioWrapperCallbacks.cpp  modioWrapperObjects.cpp
src/examples/: Ex01_Authentication.hx  Ex02_BrowseMods.hx  Ex03_SubscribeToMod.hx  Ex04_UnsubscribeFromMod.hx  Ex05_AddMod.hx  Ex05_AutomaticDownloads.hx  Ex06_AddMod.hx  Ex06_AutomaticDownloads.hx  Ex07_EditMod.hx  Ex08_GetUserSubscriptions.hx  Ex09_SetEventListener.hx  Ex10_InstallDownloadedMods.hx  Ex11_GetInstalledMods.hx  ModioWrapper.hx
